@@ -39,5 +39,5 @@
       }
    },
    "release_status" : "stable",
-   "version" : "v1.0.4"
+   "version" : "v1.1.0"
 }
