@@ -1,5 +1,8 @@
 Change log for User::getgrouplist
 
+20140109	[ 1.1.0 ]
+	- Add support for OpenBSD and MacOS X
+
 20131125	[ 1.0.4 ]
 	- Fix a memory leak
 		Thanks to Vincent Pit for notification
